--- a/scss/_seccion-categorias.scss
+++ b/scss/_seccion-categorias.scss
@@ -18,7 +18,15 @@
 
 .boton-comprar {
     display: flex;
-    justify-content: center        
+    justify-content: center;    
+}
+
+.h2-redes {
+    padding-top: 40px;   
+
+    h2 {
+        padding-left: 750px;
+    }
 }
 
 
