Agregué variables trasnform y transition y modifiqué la clase .redes-sociales utilizando &:hover. Cree el parcial colores y listas para usar en el futuro

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,3 +5,5 @@ $ancho-imagen: 250px;
 $alto-imagen: 200px;
 $tamanio-img-venta: 250px;
 $margen-img-venta: 35px;
+$animaciones-transform: scale(1.1);
+$animaciones-transition: all 0.6s;
