--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,8 +15,8 @@
 @import "seccion-contacto";
 @import "seccion-categorias";
 @import "seccion-ofertas";
-
-
+@import "listas";
+@import "colores";
 
 
 
