--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,6 @@
   height: 50px;
   border-radius: 15%;
 }
-
 .icono-facebook:hover, .icono-instagram:hover, .icono-maps:hover {
   transform: scale(1.1);
   transition: all 0.6s;
@@ -213,6 +212,10 @@ textarea {
   padding-top: 20px;
   width: 250px;
   margin-left: 35px;
+}
+.imagenes-venta:hover {
+  transform: scale(1.1);
+  transition: all 0.6s;
 }
 
 .nombre-y-precio {
