--- a/scss/_redes-sociales.scss
+++ b/scss/_redes-sociales.scss
@@ -1,4 +1,3 @@
-
 .redes-sociales {
     display: flex;    
     list-style: none;     
@@ -13,11 +12,10 @@
 
 .icono-facebook, .icono-instagram, .icono-maps {    
     height: 50px;
-    border-radius: 15%;     
+    border-radius: 15%;   
+    
+    &:hover {
+        transform: $animaciones-transform; 
+        transition: $animaciones-transition;
+    }
 }
-
-.icono-facebook:hover, .icono-instagram:hover, .icono-maps:hover {    
-   transform: scale(1.1);     
-   transition: all 0.6s;
-}
-
