--- a/scss/_seccion-categorias.scss
+++ b/scss/_seccion-categorias.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .container-categorias {
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
@@ -8,6 +10,11 @@
     padding-top: 20px;
     width: $tamanio-img-venta;
     margin-left: $margen-img-venta;    
+
+    &:hover {
+        transform: $animaciones-transform;
+        transition: $animaciones-transition;
+    }
 }    
 
 .nombre-y-precio {
@@ -18,7 +25,7 @@
 
 .boton-comprar {
     display: flex;
-    justify-content: center;    
+    justify-content: center;        
 }
 
 .h2-redes {
