--- a/css/style.css
+++ b/css/style.css
@@ -38,12 +38,24 @@
     font-size: x-small;
   }
 
-  .imagenes-venta {
+  .container-imagen .imagenes-venta {
     width: 150px;
   }
 
   header .img {
     margin-left: 270px;
+  }
+
+  .texto-header-container {
+    float: right;
+    padding-top: 30px;
+  }
+
+  .h2-redes {
+    padding-top: 40px;
+  }
+  .h2-redes .h2-texto {
+    padding-left: 400px;
   }
 }
 @media only screen and (max-width: 768px) {
@@ -60,8 +72,15 @@
     margin-left: 200px;
   }
 
-  .imagenes-venta {
+  .container-imagen .imagenes-venta {
     width: 100px;
+  }
+
+  .h2-redes {
+    padding-top: 40px;
+  }
+  .h2-redes .h2-texto {
+    padding-left: 400px;
   }
 }
 @media only screen and (max-width: 320px) {
