--- a/css/style.css
+++ b/css/style.css
@@ -84,15 +84,18 @@
   }
 }
 @media only screen and (max-width: 320px) {
-  header .img {
-    margin-left: 60px;
-    width: 150px;
-    height: 120px;
+  .body-container {
+    display: block;
   }
 
-  header .texto-header {
-    font-size: x-small;
-    text-align: center;
+  header .container-img .img {
+    margin-left: 80px;
+    width: 160px;
+    height: 150px;
+  }
+
+  body header .texto-header-container {
+    padding-top: 10px;
   }
 
   .imagenes-venta {
@@ -121,26 +124,40 @@
     padding-right: 10px;
   }
 
-  .imagenes-venta {
-    width: 50px;
+  body .container-categorias {
+    display: grid;
+    grid-template-columns: 50% 50%;
   }
 
-  p {
-    font-size: 5px;
+  .container-imagen .imagenes-venta {
+    width: 110px;
+  }
+
+  .nombre-y-precio {
+    font-size: small;
+  }
+
+  .section2-container .img-destacados {
+    padding-top: 2px;
+  }
+
+  body .footer-container {
+    padding-top: 10px;
+    padding-bottom: 5px;
+  }
+
+  body .container-contacto {
+    border: none;
+  }
+
+  body form {
+    width: auto;
   }
 }
 header .texto-header-container {
   display: grid;
   float: right;
   padding-top: 60px;
-}
-header .texto-header {
-  color: #760000;
-  font-size: xx-large;
-  padding-right: 50px;
-}
-header .texto-header a {
-  text-decoration: none;
 }
 header .container-img {
   padding-top: 10px;
@@ -149,6 +166,11 @@ header .container-img {
 header .img {
   width: 250px;
   height: 200px;
+}
+header .h2-header {
+  background-color: black;
+  color: rgba(219, 219, 219, 0.848);
+  text-align: center;
 }
 
 .section1-container {
@@ -182,7 +204,7 @@ header .img {
 }
 
 .ayuda {
-  background-color: black;
+  background-color: #212529;
   padding-top: 20px;
 }
 .ayuda p, .ayuda h1, .ayuda h2, .ayuda h3 {
@@ -191,7 +213,7 @@ header .img {
 }
 
 .container-contacto {
-  background-color: black;
+  border: solid 5px black;
 }
 .container-contacto h1 {
   color: rgba(195, 195, 195, 0.683);
@@ -260,17 +282,6 @@ textarea {
   grid-template-columns: auto;
   grid-template-rows: auto;
   justify-items: center;
-}
-
-h1, h2 {
-  text-align: center;
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-h2 {
-  background-color: black;
-  color: white;
 }
 
 /*# sourceMappingURL=style.css.map */
