--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -6,26 +6,22 @@ header {
         display: grid;        
         float: right;
         padding-top: 60px;   
-    } 
-
-    .texto-header {
-        color: rgb(118, 0, 0);
-        font-size: xx-large;
-        padding-right: 50px;
-
-        a {
-            text-decoration: none;
-        }
-    }
+    }     
 
     .container-img {
-     padding-top: 10px;
-     padding-bottom: 20px;
+        padding-top: 10px;
+        padding-bottom: 20px;
     }
 
     .img {
         width: $ancho-imagen;
         height: $alto-imagen;        
+    }
+ 
+    .h2-header {
+        background-color: black;
+        color: $color-texto;
+        text-align: center;
     }
 }
 
