--- a/scss/_medias-queries.scss
+++ b/scss/_medias-queries.scss
@@ -61,17 +61,23 @@
 
 @media only screen and (max-width:320px) { 
 
-    header .img {
-        margin-left: 60px;    
-        width: 150px;
-        height: 120px;
+    .body-container {
+        display: block;
     }
 
-    header .texto-header {
-        font-size: x-small;    
-        text-align: center;    
+    header {
+
+        .container-img .img {
+            margin-left: 80px;    
+            width: $ancho-imagen-mobile;
+            height: $alto-imagen-mobile;
+        }       
     }
 
+    body header .texto-header-container {
+        padding-top: 10px;
+    }
+       
     .imagenes-venta {
         width: 100px;
     }
@@ -88,20 +94,44 @@
     .zona-nav-footer {
         width: auto;
     }
+
     .redes-sociales {
         padding-left: 70px;
     }
+
     .redes-sociales .lista-redes { 
         padding-top: 10px;        
         padding-right: 10px;
     }
 
-    .imagenes-venta {
-        width: 50px;
+    body .container-categorias {
+        display: grid;
+        grid-template-columns: 50% 50%;
     }
 
-    p {
-        font-size: 5px;
+    .container-imagen .imagenes-venta {
+        width: 110px;
+    }
+
+    .nombre-y-precio {
+        font-size: small;
+    }
+
+    .section2-container .img-destacados {
+        padding-top: 2px;
+    } 
+
+    body .footer-container {
+        padding-top: 10px;
+        padding-bottom: 5px;
+    }
+
+    body .container-contacto {
+        border: none;
+    }
+
+    body form {
+        width: auto;
     }
 }
     
