--- a/scss/_seccion-ayuda.scss
+++ b/scss/_seccion-ayuda.scss
@@ -3,7 +3,7 @@
     padding-top: 20px;
 
     p, h1, h2, h3 {
-        color: $color-texto;
+        color: $gris-1;
         text-align: center;
     }
 }
