--- a/scss/_seccion-contacto.scss
+++ b/scss/_seccion-contacto.scss
@@ -3,7 +3,7 @@
     border: solid 5px black;
 
     h1 {
-        color: $color-ul;
+        color: $gris-2;
         text-align: center;
         padding-bottom: 20px;
     }
