--- a/scss/_section-2-pag-principal.scss
+++ b/scss/_section-2-pag-principal.scss
@@ -1,5 +1,18 @@
-.img-destacados {
+.img-destacados-1 {
+    width: 100%;
+    height: 350px;
+    padding-top: 40px;
+}
+
+.img-destacados-2 {
+    width: 100%;
+    height: 300px;
+    padding-top: 40px;
+}
+
+.img-destacados-3 {
     width: 100%;
     padding-top: 40px;
 }
+
 
