--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -1,2 +1,3 @@
-$azul-fb: rgb(60, 90, 154);
 $negro-navbar: rgb(33, 37, 41);
+$gris-1: rgba(219, 219, 219, 0.848);
+$gris-2: rgba(195, 195, 195, 0.683);
