--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -20,7 +20,7 @@ header {
  
     .h2-header {
         background-color: black;
-        color: $color-texto;
+        color: $gris-1;
         text-align: center;
     }
 }
