--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -11,7 +11,7 @@
 
 .zona-nav-footer {    
     display: grid;
-    grid-template-columns: 40% auto;                 
+    grid-template-columns: 50% 50%;                 
 }        
 
 .lista-footer {
