--- a/scss/_medias-queries.scss
+++ b/scss/_medias-queries.scss
@@ -1,7 +1,6 @@
 @media only screen and (max-width:1024px) {
-    .zona-nav-footer {
-        width: 400px;
-        font-size: x-small;
+    .zona-nav-footer {        
+        font-size: small;
     }
    
     .container-imagen {
@@ -165,5 +164,3 @@
         width: auto;
     }
 }
-    
-       
